updated bio, improved html/css organization

--- a/index.html
+++ b/index.html
@@ -1,76 +1,82 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Kayden Mimmack</title>
-	<meta name="description" content="Brief web portfolio">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kayden Mimmack</title>
+  <meta name="description" content="Online Portfolio">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/main.css">
-
-	<script src="js/modernizr-2.8.3.min.js"></script>
 </head>
-
 <body>
-  <div class="wrapper">
 
-  	<header>
-  		<div class="col-container">
-      	<div class="col-left">
-      		<p class="bold">Kayden Mimmack</p>
-      		<p>kayden.mimmack@tufts.edu</p>
-      		<p><a href="https://github.com/mimmackk/">Github</a></p>
-      	</div>
-      	<div class="col-right">
-      		<p>
-      			Hi, I'm a third-year at Tufts studying Computer Science. I'm also a multimedia contributor for the Tufts Observer student magazine, where I make featured articles interactive and fun to read online. My favorite things are Game of Thrones, laundromats, and funny-looking dogs.
-      		</p>
-      	</div>
-    		<div class="end-cols"></div>
-  			<p class="down-arrow">&darr;</p>
-  		</div>
-  	</header>
+  <div class="content-wrapper">
+    <header>
+      <div class="header-wrapper">
+        <div class="col-left">
+          <p class="bold">Kayden Mimmack</p>
+          <p><a href="mailto:kayden.mimmack@tufts.edu">kayden.mimmack@tufts.edu</a></p>
+          <p><a href="https://github.com/mimmackk/">Github</a></p>
+          <br>
+          <p><a href="#projects">Projects</a></p>
+          <p><a href="#graphic-design">Graphic Design</a></p>
+        </div>
+        <div class="col-right">
+          <p>
+          I'm a third-year at Tufts University studying Applied Math with a background in CS. I also grade Calc II papers and am a multimedia contributor for the Tufts Observer magazine, where I make special articles interactive and fun to read online. My favorite things are quiet bus rides, laundromats, and funny-looking dogs.
+          </p>
+        </div>
+        <div class="end-cols"></div>
+        <p class="down-arrow">&darr;</p>
+      </div>
+    </header>
 
-  	<!-- ............................................................... -->
-   	<h1>Projects</h1>
     <!-- ............................................................... -->
- 		<h2>Book Recommendations</h2>
- 		<p><a href="http://tuftsobserver.org/multimedia/bookshelf">Live</a> · <a href="https://github.com/mimmackk/observer-multimedia/tree/master/bookshelf">Github</a> · Built with Masonry, connects to Google Forms and Goodreads</p>
- 		<img class="web-img" src="img/bookshelf.png" alt="Screenshot of project"/>
+    <h1 id="projects">Projects</h1>
+    <!-- ............................................................... -->
 
-		<h2>Quote Cube</h2>
- 		<p><a href="http://tuftsobserver.org/multimedia/ecofeminism">Live</a> · <a href="https://github.com/mimmackk/observer-multimedia/tree/master/ecofeminism">Github</a> · Built with waypoints.js, modeled from <a href="https://desandro.github.io/3dtransforms/examples/perspective-03.html">David DeSandro's cube</a></p>
- 		<img class="web-img" src="img/ecofeminism.png" alt="Screenshot of project"/>
+    <h2>Facebook Quiz</h2>
+    <p><a href="http://tuftsobserver.org/multimedia/online-comments">Live</a> · <a href="https://github.com/tuftsobserver/online-comments">Github</a> · Designed from scratch to imitate Facebook - user follows a choose-your-own-adventure quiz in the comments section of a controversial post</p>
+    <img class="web-img" src="img/online-comments.png" alt="Screenshot of project"/>
 
-		<h2>Healthcare Article</h2>
- 		<p><a href="http://tuftsobserver.org/multimedia/transhealth">Live</a> · <a href="https://github.com/mimmackk/observer-multimedia/tree/master/healthcare">Github</a> · Built with skrollr.js and balloon.css</p>
-		<img class="web-img" src="img/healthcare.png" alt="Screenshot of project"/>
+    <h2>Major Sprawl</h2>
+    <p><a href="http://tuftsobserver.org/multimedia/major-sprawl">Live</a> · <a href="https://github.com/tuftsobserver/major-sprawl">Github</a> · Maps the spread of Tufts courses by department across campus</p>
+    <img class="web-img" src="img/major-sprawl.png" alt="Screenshot of project"/>
 
-		<h2>Long Distance Relationships Web-fographic</h2>
- 		<p><a href="http://tuftsobserver.org/multimedia/longdistance">Live</a> · <a href="https://github.com/mimmackk/observer-multimedia/tree/master/long-distance">Github</a> · Built with skrollr.js</p>
-		<img class="web-img" src="img/ldr.png" alt="Screenshot of project"/>
+    <h2>Book Recommendations</h2>
+    <p><a href="http://tuftsobserver.org/multimedia/bookshelf">Live</a> · <a href="https://github.com/tuftsobserver/bookshelf">Github</a> · Connects from Google Forms and dynamically links new recommendations to Goodreads</p>
+    <img class="web-img" src="img/bookshelf.png" alt="Screenshot of project"/>
 
-   	<hr />
-	<!-- ............................................................... -->
-	<h1>Graphic Design</h1>
-   	<!-- ............................................................... -->
- 		<img class="art-img" src="img/portrait.png" alt="Black and white illustration of trees and clouds on a starry night"/>
-		<img class="art-img" src="img/banquet.png" alt="Invitation for summer banquet" />
-		<img class="art-img" src="img/shirt.png" alt="T-shirt design for Tufts English Language Programs" />
- 		<img class="art-img" src="img/safezone.png" alt="Flyer for safezone training event"/>
-		<img class="art-img" src="img/room.png" alt="3D graphic of a room"/>
-   	<hr />
+    <h2>Comedy News</h2>
+    <p><a href="http://tuftsobserver.org/multimedia/comedy-news">Live</a> · <a href="https://github.com/tuftsobserver/comedy-news">Github</a> · Plays different Youtube videos in background dependent on scroll location</p>
+    <img class="web-img" src="img/comedy-news.png" alt="Screenshot of project"/>
 
-  	<!-- ............................................................... -->
-   	<div id="credits">
-  	<!-- ............................................................... -->
-   		<p>
-   			This website was made with <a href="https://html5boilerplate.com/">HTML5 Boilerplate</a> and inspired by <a href="https://dribbble.com/shots/2685596-Personal-Portfolio">Ruben Stom's personal portfolio</a>. I also used Google Design's resizer web app for the screenshots of my projects.
-   		</p>
-   	</div>
+
+    <hr />
+    
+    <!-- ............................................................... -->
+    <h1 id="graphic-design">Graphic Design</h1>
+    <!-- ............................................................... -->
+    <img class="art-img" src="img/shirt.png" alt="T-shirt design for Tufts English Language Programs" />
+    <img class="art-img" src="img/safezone.png" alt="Flyer for safezone training event"/>
+    <img class="art-img" src="img/banquet.png" alt="Invitation for summer banquet" />
+
+
+    <hr />
+
+    <!-- ............................................................... -->
+    <div id="credits">
+    <!-- ............................................................... -->
+      <p>
+      This website was inspired by <a href="https://dribbble.com/shots/2685596-Personal-Portfolio">Ruben Stom's personal portfolio</a>. I also used Google Design's resizer web app for the screenshots of my projects.
+      </p>
+    </div>
 
   </div>
+
+  <script src="js/modernizr-2.8.3.min.js"></script>
+
 </body>
 </html>
