changed bio blurb

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col-right">
           <p>
-          I'm a third-year at Tufts University studying Applied Math with a background in CS. I also grade Calc II papers and am a multimedia contributor for the Tufts Observer magazine, where I make special articles interactive and fun to read online. My favorite things are quiet bus rides, laundromats, and funny-looking dogs.
+          I'm a third-year at Tufts University studying Applied Math with a background in CS. I also grade Calc II homeworks and am a multimedia contributor for the Tufts Observer magazine, where I make featured articles interactive and fun to read online. My favorite things are quiet bus rides, laundromats, and funny-looking dogs.
           </p>
         </div>
         <div class="end-cols"></div>
