New projects, updated bio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kayden Mimmack</title>
+  <title>Kayden James Mimmack</title>
   <meta name="description" content="Online Portfolio">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -16,16 +16,16 @@
     <header>
       <div class="header-wrapper">
         <div class="col-left">
-          <p class="bold">Kayden Mimmack</p>
+          <p class="bold">Kayden James Mimmack</p>
           <p><a href="mailto:kayden.mimmack@tufts.edu">kayden.mimmack@tufts.edu</a></p>
           <p><a href="https://github.com/mimmackk/">Github</a></p>
           <br>
-          <p><a href="#projects">Projects</a></p>
+          <p><a href="#projects">Featured Projects</a></p>
           <p><a href="#graphic-design">Graphic Design</a></p>
         </div>
         <div class="col-right">
           <p>
-          I'm a third-year at Tufts University studying Applied Math with a background in CS. I also grade Calc II homeworks and am a multimedia contributor for the Tufts Observer magazine, where I make featured articles interactive and fun to read online. My favorite things are quiet bus rides, laundromats, and funny-looking dogs.
+          I'm a fourth-year at Tufts University studying applied math with a minor in CS. I also grade linear algebra homework and am the multimedia director for the Tufts Observer magazine, where I make featured articles interactive and fun to read online. My favorite things are quiet bus rides, laundromats, and funny-looking dogs.
           </p>
         </div>
         <div class="end-cols"></div>
@@ -34,7 +34,7 @@
     </header>
 
     <!-- ............................................................... -->
-    <h1 id="projects">Projects</h1>
+    <h1 id="projects">Featured Projects</h1>
     <!-- ............................................................... -->
 
     <h2>Facebook Quiz</h2>
@@ -49,22 +49,22 @@
     <p><a href="http://tuftsobserver.org/multimedia/bookshelf">Live</a> · <a href="https://github.com/tuftsobserver/bookshelf">Github</a> · Connects from Google Forms and dynamically links new recommendations to Goodreads</p>
     <img class="web-img" src="img/bookshelf.png" alt="Screenshot of project"/>
 
-    <h2>Comedy News</h2>
-    <p><a href="http://tuftsobserver.org/multimedia/comedy-news">Live</a> · <a href="https://github.com/tuftsobserver/comedy-news">Github</a> · Plays different Youtube videos in background dependent on scroll location</p>
-    <img class="web-img" src="img/comedy-news.png" alt="Screenshot of project"/>
+    <h2>The Literary Issue 2017</h2>
+    <p><a href="http://tuftsobserver.org/multimedia/lit2017">Live</a> · <a href="https://github.com/tuftsobserver/lit2017">Github</a> · Artistic digitization of the special Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, and art</p>
+    <img class="web-img" src="img/lit2017.png" alt="Screenshot of project"/>
 
 
-    <hr />
+    <hr>
     
     <!-- ............................................................... -->
     <h1 id="graphic-design">Graphic Design</h1>
     <!-- ............................................................... -->
     <img class="art-img" src="img/shirt.png" alt="T-shirt design for Tufts English Language Programs" />
     <img class="art-img" src="img/safezone.png" alt="Flyer for safezone training event"/>
-    <img class="art-img" src="img/banquet.png" alt="Invitation for summer banquet" />
+    <img class="art-img" src="img/luncheon.png" alt="Invitation for luncheon" />
 
 
-    <hr />
+    <hr>
 
     <!-- ............................................................... -->
     <div id="credits">
