--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="header-wrapper">
         <div class="col-left">
           <p class="bold">Kayden James Mimmack</p>
-          <p><a href="mailto:kayden.mimmack@tufts.edu">kayden.mimmack@tufts.edu</a></p>
+          <p><a href="mailto:kjmimmack@ucdavis.edu">kjmimmack@ucdavis.edu</a></p>
           <p><a href="https://github.com/mimmackk/">Github</a></p>
           <br>
           <p><a href="#projects">Featured Projects</a></p>
@@ -25,7 +25,7 @@
         </div>
         <div class="col-right">
           <p>
-          I'm a fourth-year at Tufts University studying applied math with a minor in CS. I also grade linear algebra homework and am the multimedia director for the Tufts Observer magazine, where I make featured articles interactive and fun to read online. My favorite things are quiet bus rides, laundromats, and funny-looking dogs.
+          I'm a Calculus TA and PhD Student in Applied Math at UC Davis. My favorite things are quiet bus rides, laundromats, and funny-looking dogs.
           </p>
         </div>
         <div class="end-cols"></div>
@@ -70,7 +70,7 @@
     <div id="credits">
     <!-- ............................................................... -->
       <p>
-      This website was inspired by <a href="https://dribbble.com/shots/2685596-Personal-Portfolio">Ruben Stom's personal portfolio</a>. I also used Google Design's resizer web app for the screenshots of my projects.
+      This website uses Google Design's resizer web app for screenshots of projects.
       </p>
     </div>
 
