--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <p class="bold">Kayden James Mimmack</p>
           <p><a href="mailto:kjmimmack@ucdavis.edu">kjmimmack@ucdavis.edu</a></p>
           <p><a href="https://github.com/mimmackk/">Github</a></p>
-          <br>
+          <!-- <br>
           <p><a href="#projects">Featured Projects</a></p>
-          <p><a href="#graphic-design">Graphic Design</a></p>
+          <p><a href="#graphic-design">Graphic Design</a></p> -->
         </div>
         <div class="col-right">
           <p>
