--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     <!-- ............................................................... -->
     <h1 id="graphic-design">Graphic Design</h1>
     <!-- ............................................................... -->
-    <img class="art-img" src="img/shirt.png" alt="T-shirt design for Tufts English Language Programs" />
+    <img class="art-img" src="img/shirt-front-preview.png" alt="T-shirt design 2018 for Tufts English Language Programs" />
+    <img class="art-img" src="img/shirt.png" alt="T-shirt design 2016 for Tufts English Language Programs" />
     <img class="art-img" src="img/safezone.png" alt="Flyer for safezone training event"/>
     <img class="art-img" src="img/luncheon.png" alt="Invitation for luncheon" />
 
