--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
     <!-- ............................................................... -->
 
     <h2>Facebook Quiz</h2>
-    <p><a href="http://tuftsobserver.org/multimedia/online-comments">Live</a> · <a href="https://github.com/tuftsobserver/online-comments">Github</a> · Designed from scratch to imitate Facebook - user follows a choose-your-own-adventure quiz in the comments section of a controversial post</p>
+    <p><a href="http://tuftsobserver.org/multimedia/online-comments">Live</a> · <a href="https://github.com/tuftsobserver/online-comments">Github</a> · Designed from scratch to imitate Facebook - user follows a choose-your-own-adventure quiz in the comments section of a controversial post.</p>
     <img class="web-img" src="img/online-comments.png" alt="Screenshot of project"/>
 
     <h2>Major Sprawl</h2>
-    <p><a href="http://tuftsobserver.org/multimedia/major-sprawl">Live</a> · <a href="https://github.com/tuftsobserver/major-sprawl">Github</a> · Maps the spread of Tufts courses by department across campus</p>
+    <p><a href="http://tuftsobserver.org/multimedia/major-sprawl">Live</a> · <a href="https://github.com/tuftsobserver/major-sprawl">Github</a> · Maps the spread of Tufts courses by department across campus.</p>
     <img class="web-img" src="img/major-sprawl.png" alt="Screenshot of project"/>
 
     <h2>Book Recommendations</h2>
-    <p><a href="http://tuftsobserver.org/multimedia/bookshelf">Live</a> · <a href="https://github.com/tuftsobserver/bookshelf">Github</a> · Connects from Google Forms and dynamically links new recommendations to Goodreads</p>
+    <p><a href="http://tuftsobserver.org/multimedia/bookshelf">Live</a> · <a href="https://github.com/tuftsobserver/bookshelf">Github</a> · Connects from Google Forms and dynamically links new recommendations to Goodreads.</p>
     <img class="web-img" src="img/bookshelf.png" alt="Screenshot of project"/>
 
-    <h2>The Literary Issue 2017</h2>
-    <p><a href="http://tuftsobserver.org/multimedia/lit2017">Live</a> · <a href="https://github.com/tuftsobserver/lit2017">Github</a> · Artistic digitization of the special Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, and art</p>
-    <img class="web-img" src="img/lit2017.png" alt="Screenshot of project"/>
+    <h2>The Literary Issue 2018</h2>
+    <p><a href="http://tuftsobserver.org/multimedia/lit2018">Live</a> · <a href="https://github.com/tuftsobserver/lit2018">Github</a> · Artistic digitization of the special Literary Issue of the Tufts Observer, containing a compilation of poetry, prose, and art.</p>
+    <img class="web-img" src="img/lit2018.png" alt="Screenshot of project"/>
 
 
     <hr>
@@ -62,7 +62,7 @@
     <img class="art-img" src="img/shirt.png" alt="T-shirt design 2016 for Tufts English Language Programs" />
     <img class="art-img" src="img/shirt-front-preview.png" alt="T-shirt design 2018 for Tufts English Language Programs" />
     <img class="art-img" src="img/safezone.png" alt="Flyer for safezone training event"/>
-    <img class="art-img" src="img/luncheon.png" alt="Invitation for luncheon" />
+<!--     <img class="art-img" src="img/luncheon.png" alt="Invitation for luncheon" /> -->
 
 
     <hr>
