--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-right">
           <p>
-          I'm currently a PhD Student in Applied Mathematics at UC Davis. I also have a background in both computer science and design. I enjoy easy hikes, feel-good sci-fi, and terrible puns. Scroll down for a portfolio of my web development and graphic design work.
+          I'm currently a graduate student in Applied Mathematics at UC Davis. I also have a background in both computer science and design. I enjoy easy hikes, feel-good sci-fi, and terrible puns. Scroll down for a portfolio of my web development and graphic design work.
           </p>
         </div>
         <div class="end-cols"></div>
