--- a/unitball/index.html
+++ b/unitball/index.html
@@ -61,11 +61,7 @@
 
     <p>Why?</p>
 
-    <p>Well, a mathematician would say that once we understand an object in 1 dimension and in 2 dimensions, then we understand it in <em>all</em> dimensions, and so examining \(\mathbb R^3\) is redundant, at best.</p>
-
-    <p>Snarky bastards.</p>
-
-    <p>I say pictures are fun and interesting, and nobody learning a new mathematical concept has ever wished for <em>fewer</em> pictures. So, here's what the 3-dimensional unit ball looks like for various values of \(p\):</p>
+    <p>Well, a mathematician would say that once we understand an object in 1 dimension and in 2 dimensions, then we understand it in <em>all</em> dimensions, and so examining \(\mathbb R^3\) is redundant, at best. I say pictures are fun and interesting, and nobody learning a new mathematical concept has ever wished for <em>fewer</em> pictures. So, here's what the 3-dimensional unit ball looks like for various values of \(p\):</p>
 
     <img class="center" src="img/animation3d.gif" alt="Animated 3D Unit Ball">
 
