--- a/hopfield/index.html
+++ b/hopfield/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="content_wrapper">
 <h1>HOPFIELD NETWORK</h1>
-<h2>Click Circles to Interact</h2>
+<p class="subtitle">Click Circles to Interact</p>
 
 <div class="grid_settings">
   <div class="slide_settings">
